--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,13 @@
         <junit.version>5.10.0</junit.version>
     </properties>
 
+
     <dependencies>
+        <dependency>
+            <groupId>org.deeplearning4j</groupId>
+            <artifactId>deeplearning4j-core</artifactId>
+            <version>1.0.0-beta7</version>
+        </dependency>
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-controls</artifactId>
